fixed main intro

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </header>
         <main>
             <section class="main-intro">
-                <p class="intro-content" id="text-confused">Запутались в сложных терминах и документах?</p>
-                <p id="text-documents">Узнайте, какие <span class="border-highlight" >&nbsp;документы&nbsp;</span> подготовить и что учесть при  <span class="border-highlight" >&nbsp;продаже и покупке&nbsp;</span> квартиры</p>
-                <button class="button intro-content" type="button" >Хочу знать больше</button>
+                <p class="intro-text-1">Запутались в сложных терминах и документах?</p>
+                <p class="intro-text-2">Узнайте, какие <span class="border-highlight" >&nbsp;документы&nbsp;</span> <br> подготовить и что учесть <br> при  <span class="border-highlight" >&nbsp;продаже и покупке&nbsp;</span> <br> квартиры</p>
+                <button class="button" type="button" >Хочу знать больше</button>
                 <img class="intro-image" src="images/main-image1.png" alt="изображение" width="46.94%" >
             </section>
             <figure>
