completed page layout, fixed minor errors

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
                     <use xlink:href="images/sprite.svg#logo"></use>
                 </svg>
                 <nav class="menu">
-                    <a class="header-el link" id="sell-apartment" href="sell-apartment.html" id="sell-apt-link" >Как продать квартиру</a>
+                    <a class="header-el link" id="sell-apt-link" href="sell-apartment.html" >Как продать квартиру</a>
                     <a class="header-el link" id="client-stories" href="client-stories.html" >Истории клиентов</a>
                     <svg class="header-el icon" id="phone-icon-header" width="28.16" height="28.16" >
                         <use xlink:href="images/sprite.svg#header-phone-icon"></use>
                     </svg>
-                    <a class="header-el tel" id="header-tel" href="tel:+74957838715" id="tel-header" >+7 495 783 87 15</a>
+                    <a class="header-el tel" id="header-tel" href="tel:+74957838715" >+7 495 783 87 15</a>
                     <button class="header-el button" type="button" >Перезвоните мне</button>
                 </nav>
             </div>
@@ -60,29 +60,32 @@
             </section>
         </main>
         <footer>
-            <svg class="icon" id="logo-footer" width="101" height="111.64">
-                <use xlink:href="images/sprite.svg#logo"></use>
+            <svg class="icon" width="101" height="111.64">
+                <use xlink:href="images/sprite.svg#logo-footer"></use>
             </svg>
-            <div>
-                <svg class="icon" id="location-icon" width="18.95" height="23.5" >
-                    <use xlink:href="images/sprite.svg#footer-location-icon"></use>
-                </svg>
-                <address class="address">г. Москва, Красная площадь д.1</address>
-            </div>
-            <div class="tel" id="tel-footer">
-                <svg class="icon" id="phone-icon-footer" width="24" height="24" >
-                    <use xlink:href="images/sprite.svg#footer-phone-icon"></use>
-                </svg>
-                <a href="tel:+74957838715" >+7 495 783 87 15</a>
+            <div class="contacts">
+                <div class="address">
+                    <svg class="icon" id="location-icon" width="18.95" height="23.5" >
+                        <use xlink:href="images/sprite.svg#footer-location-icon"></use>
+                    </svg>
+                    <address class="address">г. Москва, Красная площадь д.1</address>
+                </div>
+                <div class="tel">
+                    <svg class="icon" id="phone-icon-footer" width="24" height="24" >
+                        <use xlink:href="images/sprite.svg#footer-phone-icon"></use>
+                    </svg>
+                    <a href="tel:+74957838715" >+7 495 783 87 15</a>
+                </div>
             </div>
             <div class="schedule">
-                <svg class="icon" id="clock-icon" width="23" height="24" >
-                    <use xlink:href="images/sprite.svg#footer-schedule-icon"></use>
-                </svg>
-                <p>Режим работы</p>
+                <div class="schedule-title">
+                    <svg class="icon" id="clock-icon" width="23" height="24" >
+                        <use xlink:href="images/sprite.svg#footer-schedule-icon"></use>
+                    </svg>
+                    <p>Режим работы</p>
+                </div>
+                <p>Пн. - Пт. - с 9:00 до 17:00 <br> Сб. - Вс. - с 9:00 до 17:00</p>
             </div>
-            <p id="schedule-value1">Пн. - Пт. - с 9:00 до 17:00</p>
-            <p id="schedule-value2">Сб. - Вс. - с 9:00 до 17:00</p>
         </footer>
     </body>
 </html>
