--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <body>
         <header>
             <div class="header" >
-                <svg class="header-el logo-header" width="82.74" height="91.46" >
+                <svg class="logo-header" width="82.74" height="91.46" >
                     <use xlink:href="images/sprite.svg#logo"></use>
                 </svg>
                 <nav class="menu">
-                    <a class="header-el link" id="sell-apt-link" href="sell-apartment.html" >Как продать квартиру</a>
-                    <a class="header-el link" id="client-stories" href="client-stories.html" >Истории клиентов</a>
-                    <svg class="header-el icon" id="phone-icon-header" width="28.16" height="28.16" >
+                    <a class="link" id="sell-apt-link" href="sell-apartment.html" >Как продать квартиру</a>
+                    <a class="link" id="client-stories" href="client-stories.html" >Истории клиентов</a>
+                    <svg class="icon" id="phone-icon-header" width="28.16" height="28.16" >
                         <use xlink:href="images/sprite.svg#header-phone-icon"></use>
                     </svg>
-                    <a class="header-el tel" id="header-tel" href="tel:+74957838715" >+7 495 783 87 15</a>
-                    <button class="header-el button" type="button" >Перезвоните мне</button>
+                    <a class="tel" id="header-tel" href="tel:+74957838715" >+7 495 783 87 15</a>
+                    <button class="button" type="button" >Перезвоните мне</button>
                 </nav>
             </div>
         </header>
